// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartTransactionStatusPage renders the "failed" STX status: smart-transaction-status-failed 1`] = `
<div>
  <div
    class="flex-col items-center mb-0 flex h-full w-full smart-transaction-status-page"
  >
    <div
      class="flex-col items-center justify-center flex w-full"
      style="flex-grow: 1;"
    >
      <div
        class="flex-col items-center flex w-full"
      >
        <div
          data-status="reverted"
          data-testid="mock-animation"
        />
        <h4
          class="mm-box mm-text mm-text--heading-md mm-text--font-weight-bold mm-box--color-text-default"
        >
          Your transaction failed
        </h4>
        <div
          class="flex-col items-center flex smart-transaction-status-page__description"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--margin-top-2 mm-box--color-text-alternative"
          >
            Sudden market changes can cause failures. If the problem continues, reach out to MetaMask customer support.
          </p>
        </div>
        <div
          class="flex-col mt-2 flex"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            type="link"
          >
            View transaction
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-col p-4 pb-0 flex w-full smart-transaction-status-page__footer"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--margin-top-3 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
        data-testid="smart-transaction-status-page-footer-close-button"
      >
        View activity
      </button>
    </div>
  </div>
</div>
`;

exports[`SmartTransactionStatusPage renders the "pending" STX status: smart-transaction-status-pending 1`] = `
<div>
  <div
    class="flex-col items-center mb-0 flex h-full w-full smart-transaction-status-page"
  >
    <div
      class="flex-col items-center justify-center flex w-full"
      style="flex-grow: 1;"
    >
      <div
        class="flex-col items-center flex w-full"
      >
        <div
          data-status="pending"
          data-testid="mock-animation"
        />
        <h4
          class="mm-box mm-text mm-text--heading-md mm-text--font-weight-bold mm-box--color-text-default"
        >
          Your transaction was submitted
        </h4>
        <div
          class="flex-col mt-2 flex"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            type="link"
          >
            View transaction
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-col p-4 pb-0 flex w-full smart-transaction-status-page__footer"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--margin-top-3 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
        data-testid="smart-transaction-status-page-footer-close-button"
      >
        View activity
      </button>
    </div>
  </div>
</div>
`;

exports[`SmartTransactionStatusPage renders the "success" STX status: smart-transaction-status-success 1`] = `
<div>
  <div
    class="flex-col items-center mb-0 flex h-full w-full smart-transaction-status-page"
  >
    <div
      class="flex-col items-center justify-center flex w-full"
      style="flex-grow: 1;"
    >
      <div
        class="flex-col items-center flex w-full"
      >
        <div
          data-status="success"
          data-testid="mock-animation"
        />
        <h4
          class="mm-box mm-text mm-text--heading-md mm-text--font-weight-bold mm-box--color-text-default"
        >
          Your transaction is complete
        </h4>
        <div
          class="flex-col mt-2 flex"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            type="link"
          >
            View transaction
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-col p-4 pb-0 flex w-full smart-transaction-status-page__footer"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-secondary mm-text--body-md-medium mm-box--margin-top-3 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
        data-testid="smart-transaction-status-page-footer-close-button"
      >
        View activity
      </button>
    </div>
  </div>
</div>
`;
